syntax = "proto3";

package course;

import "common/base_response.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/abu-umair/be-lms-go/pb/course";


service CourseService {
    rpc CreateCourse (CreateCourseRequest) returns (CreateCourseResponse);
    rpc DetailCourse (DetailCourseRequest) returns (DetailCourseResponse);
    rpc EditCourse (EditCourseRequest) returns (EditCourseResponse);
    rpc DeleteCourse (DeleteCourseRequest) returns (DeleteCourseResponse);
}

message CreateCourseRequest {
  string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string name = 2 [(buf.validate.field).string = {
    min_len: 1, 
    max_len: 255
  }];

  string address = 3 [(buf.validate.field).string = {
    max_len: 1000 
  }];
  
  string image_file_name = 4 [(buf.validate.field).string = { 
    min_len: 1, max_len: 255
  }];

}

message CreateCourseResponse {
  common.BaseResponse base = 1;
  string id = 2;
//   string name = 3;
//   string address = 4;

}

message DetailCourseRequest {
  string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message DetailCourseResponse {
  common.BaseResponse base = 1;
  string id = 2;
  string name = 3;
  string address = 4;
  string image_file_name = 5;
}

message EditCourseRequest {
  string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string name = 2 [(buf.validate.field).string = {
    min_len: 1, 
    max_len: 255
  }];

  string address = 3 [(buf.validate.field).string = {
    max_len: 1000 
  }];
  
  string image_file_name = 4 [(buf.validate.field).string = { 
    min_len: 1, max_len: 255
  }];

}

message EditCourseResponse {
  common.BaseResponse base = 1;
  string id = 2;
//   string name = 3;
//   string address = 4;

}

message DeleteCourseRequest {
  string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message DeleteCourseResponse {
  common.BaseResponse base = 1;
}